--- a/src/main/resources/templates/Hourly_baseline_drop.html
+++ b/src/main/resources/templates/Hourly_baseline_drop.html
@@ -14,7 +14,7 @@
         <td align="center" valign="top">
             <table cellpadding="0" cellspacing="0" border="0" style="width:700px; max-width:700px; background-color: #ffffff; border-radius: 8px; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);">
                 <tr>
-                    <td style="background-color: #f15b22; color: white; padding: 24px; text-align: center; border-top-left-radius: 8px; border-top-right-radius: 8px;">
+                    <td style="background-color: #dc3545; color: white; padding: 24px; text-align: center; border-top-left-radius: 8px; border-top-right-radius: 8px;">
                         <h1 style="margin: 0; font-size: 26px;">Hourly Sales Drop Alert</h1>
                     </td>
                 </tr>
