removed terminate code and lock count

--- a/src/main/resources/templates/Timeout.html
+++ b/src/main/resources/templates/Timeout.html
@@ -66,14 +66,14 @@
                                 <th style="background-color: #f8f8f8; padding: 12px; border-bottom: 1px solid #ddd; text-align: left;">Merchant</th>
                                 <td style="padding: 12px; border-bottom: 1px solid #ddd;" th:text="${merchantName}">[Merchant]</td>
                             </tr>
-                            <tr>
-                                <th style="background-color: #f8f8f8; padding: 12px; border-bottom: 1px solid #ddd; text-align: left;">Terminate Code</th>
-                                <td style="padding: 12px; border-bottom: 1px solid #ddd;" th:text="${terminateCode}">[Terminate Code]</td>
-                            </tr>
-                            <tr>
-                                <th style="background-color: #f8f8f8; padding: 12px; border-bottom: 1px solid #ddd; text-align: left;">Product Lock Count</th>
-                                <td style="padding: 12px; border-bottom: 1px solid #ddd;" th:text="${productLockCount}">[Product Lock Count]</td>
-                            </tr>
+<!--                            <tr>-->
+<!--                                <th style="background-color: #f8f8f8; padding: 12px; border-bottom: 1px solid #ddd; text-align: left;">Terminate Code</th>-->
+<!--                                <td style="padding: 12px; border-bottom: 1px solid #ddd;" th:text="${terminateCode}">[Terminate Code]</td>-->
+<!--                            </tr>-->
+<!--                            <tr>-->
+<!--                                <th style="background-color: #f8f8f8; padding: 12px; border-bottom: 1px solid #ddd; text-align: left;">Product Lock Count</th>-->
+<!--                                <td style="padding: 12px; border-bottom: 1px solid #ddd;" th:text="${productLockCount}">[Product Lock Count]</td>-->
+<!--                            </tr>-->
                             <tr>
                                 <th style="background-color: #f8f8f8; padding: 12px; border-bottom: 1px solid #ddd; text-align: left;">Location</th>
                                 <td style="padding: 12px; border-bottom: 1px solid #ddd;" th:text="${location}">[Location]</td>
